--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - uses: actions/setup-go@master
+      - uses: actions/setup-go@v1
+        with:
+          go-version: '1.13.5'
       - name: build
         run: go build -o pingme *.go
       - name: collect artifacts
