--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,17 +30,30 @@ jobs:
         with:
           go-version: '1.13.5'
       - name: build
-        run: go build -o pingme *.go
-      - name: create artifacts
         run: |
-          zip --junk-paths pingme.zip README.md pingme
-      # upload binaries
+          mkdir pingme-linux-amd64
+          mkdir pingme-darwin-amd64
+          env GOOS=linux GOARCH=amd64 go build -o pingme-linux-amd64/pingme *.go
+          env GOOS=darwin GOARCH=amd64 go build -o pingme-darwin-amd64/pingme *.go
+          tar -C $PWD -cvzf pingme-linux-amd64.tar.gz pingme-linux-amd64
+          tar -C $PWD -cvzf pingme-darwin-amd64.tar.gz pingme-darwin-amd64
+      # upload binaries linux
       - uses: actions/upload-release-asset@v1.0.1
         id: upload-release-asset
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./pingme.zip
-          asset_name: pingme.zip
-          asset_content_type: application/zip
+          asset_path: ./pingme-linux-amd64.tar.gz
+          asset_name: pingme-linux-amd64.tar.gz
+          asset_content_type: application/gzip
+      # upload binaries darwin
+      - uses: actions/upload-release-asset@v1.0.1
+        id: upload-release-asset
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./pingme-darwin-amd64.tar.gz
+          asset_name: pingme-darwin-amd64.tar.gz
+          asset_content_type: application/gzip
